# Chunk-GFN

./: L14_RNA1_dataset.pickle  L14_RNA1_dataset.pkl  L14_RNA1_high_rewards.pickle  L14_RNA1_highrewards_library.txt  L14_RNA1_modes.pickle  L14_RNA2_dataset.pickle  L14_RNA2_dataset.pkl  L14_RNA2_high_rewards.pickle  L14_RNA2_highrewards_library.txt  L14_RNA2_modes.pickle  L14_RNA3_dataset.pickle  L14_RNA3_modes.pickle  README.md  bit_sequence.sh  main.py  main.sh  modes_128.txt  modes_128_dataset.txt  modes_32.txt  modes_64.txt  modes_64_dataset.txt  prioritized_rb.sh  pyproject.toml  run.sh  run_all.sh  test.sh
chunkgfn/: constants.py  playground.ipynb
chunkgfn/algo/: a2c.py  base_unconditional_gfn.py  option_critic.py  random_sampler.py  random_sampler_chunk_replacement.py  sac.py  sampler_base.py  tb_gfn.py  tb_gfn_bis.py  tb_gfn_chunk_replacement.py  tb_gfn_loss.py  tb_gfn_variable.py  utils.py  vargrad_tbgfn.py
chunkgfn/datamodules/: base_module.py  base_sequence.py  bit_sequence.py  ccds_sequence.py  edit_distance_smiles_sequence.py  hypergrid.py  rna_binding.py  selfies_sequence.py  smiles_sequence.py  text_chunk.py
chunkgfn/datasets/: ccds.py  text_chunk.py
chunkgfn/environment/: base_module.py  base_sequence.py  (+7 more)
configs/: main.yaml  train.yaml
data/: README.md
notebooks/: ccds.ipynb  gflownet_toy_dataset_training.ipynb  paper_results.ipynb  playground.ipynb  rna_binding.ipynb  selfies.ipynb  selfies_eval.ipynb
sbatch_scripts/: gfn_lib_bpe_0.1.sh  gfn_lib_bpe_0.2.sh  gfn_random_0.2.sh  wrapper.sh
testing/: test_bit_sequence.py  test_hypergrid.py
(+353 files in other folders)
